--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,9 @@ jar {
     manifest {
         attributes 'Main-Class': mainClassName
     }
+    /*from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }*/
 }
 
 
